--- a/source/partials/snippets/_person.erb
+++ b/source/partials/snippets/_person.erb
@@ -15,6 +15,8 @@ if p.has_key?("bio_short")
 else
     person_summary = "Learn more about " + p.fullname
 end
+# if defined?(style) && style == "light"
+# end
 %>
 <div class="media-object card-person<% if defined?(classes) %> <%= classes %><% end %>">
     <% if p.has_key?("profile_pic") %>
