Typo in summary

--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -1,8 +1,8 @@
 ---
 title: "Datica Webinars"
-summary: "In-depth presenations on the latest compliance challenges"
+summary: "In-depth presentations on the latest compliance challenges"
 author: "Datica, Inc."
-tags: "compliance, HIPAA, kubernetes"
+tags: "compliance, HIPAA, kubernetes, webinars, video"
 layout: basic
 customJS: "/public/js/webinar.js"
 ---
