--- a/source/partials/snippets/_person-avatar.erb
+++ b/source/partials/snippets/_person-avatar.erb
@@ -43,7 +43,7 @@ end
         <% if datican == true %>
             <a href="/about/<%= p["slug"] %>/" title="<%= p.fullname %>">
         <% end %>
-        <span data-tooltip aria-haspopup="true" class="" data-fade-in-duration="20" data-fade-out-duration="100" data-allow-html="true" data-disable-hover="false" data-v-offset="0" data-click-open="false"  title="<%= p.fullname %>, <%= p.role %>">
+        <span data-tooltip aria-haspopup="true" class="" data-fade-in-duration="20" data-fade-out-duration="100" data-allow-html="true" data-disable-hover="false" data-v-offset="0" data-click-open="false"  title="<%= p.fullname %>, <% if p.person_type == "Datica Alumni" %>Datica Alumni — Former <% end %><%= p.role %>">
             <img class="avatar avatar--<%= size %> circle" src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=<%= img_size %>&h=<%= img_size %>&fm=jpg&q=60" alt="<%= p.fullname %>">
         </span>
         <% if datican == true %>
