Renamed /platform/ to /products/ sitewide

--- a/source/customers/index.html.erb
+++ b/source/customers/index.html.erb
@@ -57,7 +57,7 @@ layout: listing
 <section class="section-article--med">
     <div class="row">
         <div class="columns small-12">
-            <a class="button button--primary" href="/platform/success" title="Read customer success stories">Hear from more Datica customers</a>
+            <a class="button button--primary" href="/products/success" title="Read customer success stories">Hear from more Datica customers</a>
         </div>
     </div>
 </section>
