--- a/source/contentful_templates/customer.html.erb
+++ b/source/contentful_templates/customer.html.erb
@@ -161,7 +161,7 @@ end
             <div class="menu button-cluster align-center">
                 <% filtered_customers = data.site.customers.select{ |id, customer| (customer.has_key?("case_study") || customer.has_key?("customer_spotlight")) } %>
                 <% previous_item = get_previous_item(filtered_customers, p, "company_name") %>
-                <%= partial "partials/snippets/button", :locals => { :label => "Customer Success", :title => "Datica Customer Proof - See All", :url => "/platform/success", :button_classes => "medium-order-2 button hollow hollow-invisible", :icon => "icon-chevron-up", :icon_align => "right", :icon_color => "blue", :rel => "prev" } %>
+                <%= partial "partials/snippets/button", :locals => { :label => "Customer Success", :title => "Datica Customer Proof - See All", :url => "/products/success", :button_classes => "medium-order-2 button hollow hollow-invisible", :icon => "icon-chevron-up", :icon_align => "right", :icon_color => "blue", :rel => "prev" } %>
                 <% if previous_item != nil %>
                     <%= partial "partials/snippets/button", :locals => { :label => "#{previous_item.company_name}", :title => "View Previous Profile", :url => "/customer/#{previous_item.slug}", :button_classes => "medium-order-1 button hollow", :icon => "icon-chevron-left", :icon_align => "left", :icon_color => "blue" } %>
                 <% end %>
