--- a/source/pricing/partials/_pricing-ent.erb
+++ b/source/pricing/partials/_pricing-ent.erb
@@ -13,7 +13,7 @@
             <li><i class="fa-li fa fa-check"></i>4 Hour Breach Reporting</li>
             <li><i class="fa-li fa fa-check"></i><span class="has-tip top" data-tooltip aria-haspopup="true" data-disable-hover="false" title="The SOC 2 report focuses on a business's non-financial reporting controls as they relate to security, availability, processing integrity, confidentiality, and privacy of a system, as opposed to SOC 1/SSAE 16 which is focused on the financial reporting controls.">SOC 2</span> Compliance</li>
             <li><i class="fa-li fa fa-check"></i>
-                <a href="/platform/compliance" class="has-tip top" data-tooltip aria-haspopup="true" data-disable-hover="false" title="Datica is HITRUST CSF Certified. Customers can inherit some of our controls while doing their own audits or certification process. Tap to read more:">HITRUST CSF Certification &amp; Inheritance</a>
+                <a href="/products/compliance" class="has-tip top" data-tooltip aria-haspopup="true" data-disable-hover="false" title="Datica is HITRUST CSF Certified. Customers can inherit some of our controls while doing their own audits or certification process. Tap to read more:">HITRUST CSF Certification &amp; Inheritance</a>
             </li>
             <li><i class="fa-li fa fa-check"></i>Security Audit Guarantee</li>
         </ul>
