Some more F&R, porting old integration page to Slim

--- a/source/layouts/platform.erb
+++ b/source/layouts/platform.erb
@@ -19,7 +19,7 @@
         <div id="platformTop" class="show-for-large" data-sticky-container>
             <nav class="sticky sticky-nav container-color--white drop text-center full-width" data-sticky data-options="marginTop:0; topAnchor:platformTop">
                 <ul class="menu horizontal align-center">
-                    <%= partial "platform/nav-platform" %>
+                    <%= partial "products/nav-platform" %>
                 </ul>
             </nav>
         </div>
