--- a/source/seldon/nav.html.slim
+++ b/source/seldon/nav.html.slim
@@ -19,4 +19,4 @@ hide_from_sitemap: true
 #platformTop.show-for-large data-sticky-container="" 
   nav.sticky.sticky-nav.container-color--white.drop.text-center.full-width data-options=("marginTop:0; topAnchor:platformTop") data-sticky="" 
     ul.menu.horizontal.align-center
-      = partial "platform/nav-platform"
+      = partial "products/nav-platform"
